[tool.poetry]
name = "cutqc"
version = "1.1.0"
description = "CutQC cuts a large quantum circuits into smaller subcircuits and run on small quantum computers."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
gurobipy = "^9.5.2"
networkx = "^2.8.6"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
pylatexenc = "^2.10"
pydot = "^1.4.2"
qiskit = "<=0.36.2"
tensorflow = "^2.10.0"
tqdm = "^4.64.1"
scikit-learn = "^1.1.2"
scipy = "^1.9.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"
gurobipy-stubs = "^1.0.1"
types-psutil = "^5.9.5"
networkx-stubs = "^0.0.0"
types-pytz = "^2022.2.1.0"
scalene = "^1.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
